[package]
name = "my_drive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.1"
serde_repr = "0.1"
mongodb = "2.3.1"
bson = {version = "2.8.1", features = ["chrono-0_4"]}
dotenv = "0.15"